@@ -1,3 +1,11 @@
+2008-09-10  Frank Ch. Eigler  <fche@elastic.org>
+
+	* runtime.h (STP_USE_FRAME_POINTER): Remove architecture #if's.
+	All will activate it if CONFIG_FRAME_POINTER unless
+	STP_USE_DWARF_UNWINDER.
+	* stack-i386.c: (__stp_stack_print): Handle !DWARF and !FRAME
+	configuration.
+
 2008-09-10  Mark Wielaard  <mjw@redhat.com>
 
 	* sym.h (_stp_module): Rename module_base to dwarf_module_base.
